--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -14,7 +14,8 @@
    {{ app.user.username }}
   </div>
   <div>
-   <a href="{{ path('fos_user_security_logout') }}">Logout</a>
+    <a href="{{ path('fos_user_security_logout') }}"> <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Logout</button>
+ </a>
   </div>
 
  </nav>
